# src/handlers/database/table/data/upsert.rs
@@ -17,6 +17,7 @@ use axum::{
         (status = 204, description = "Data upserted"),
         (status = 404, description = "Table not found")
     ),
+    security(("bearer_auth" = [])),
     tag = "data"
 )]
 pub async fn data_upsert(
